--- a/dev-python/simplejson/ChangeLog
+++ b/dev-python/simplejson/ChangeLog
@@ -1,434 +1,145 @@
 # ChangeLog for dev-python/simplejson
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.111 2013/07/13 11:41:28 vincent Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  13 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org>
-  simplejson-3.3.0.ebuild:
-  ppc64 keyword added, bug #468468
+*simplejson-3.8.0 (09 Aug 2015)
+*simplejson-3.7.2 (09 Aug 2015)
 
-  10 Jul 2013; Markos Chandras <hwoarang@gentoo.org> simplejson-3.3.0.ebuild:
-  Add ~mips. Bug #468268
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
+  +simplejson-3.7.2.ebuild, +simplejson-3.8.0.ebuild:
+  proj/gentoo: Initial commit
 
-  26 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> simplejson-3.3.0.ebuild:
-  Stable on arm, wrt bug #472862
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.3.0.ebuild:
-  Stable for amd64, wrt bug #472862
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.3.0.ebuild:
-  Stable for x86, wrt bug #472862
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.3.0.ebuild:
-  Stable for ppc, wrt bug #472862
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  10 Jun 2013; Jeroen Roovers <jer@gentoo.org> simplejson-3.3.0.ebuild:
-  Stable for HPPA (bug #472862).
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> simplejson-3.7.2.ebuild,
+  simplejson-3.8.0.ebuild:
+  Use https by default
 
-  19 May 2013; Alexis Ballier <aballier@gentoo.org> simplejson-3.3.0.ebuild:
-  keyword ~amd64-fbsd, bug #468268
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  16 May 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.1.3.ebuild:
-  Stable for ppc, wrt bug #469658
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  14 May 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.1.3.ebuild:
-  Stable for arm, wrt bug #469658
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  14 May 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.1.3.ebuild:
-  Stable for x86, wrt bug #469658
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  14 May 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.1.3.ebuild:
-  Stable for amd64, wrt bug #469658
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-*simplejson-3.3.0 (08 May 2013)
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  08 May 2013; Tim Harder <radhermit@gentoo.org> +simplejson-3.3.0.ebuild:
-  Version bump.
+  Bug: https://bugs.gentoo.org/552720
 
-  02 May 2013; Jeroen Roovers <jer@gentoo.org> simplejson-3.2.0.ebuild:
-  Marked ~hppa (bug #468268).
+*simplejson-3.8.1 (28 Oct 2015)
 
-  02 May 2013; Tim Harder <radhermit@gentoo.org> -simplejson-2.6.2.ebuild,
-  -simplejson-3.0.0.ebuild, -simplejson-3.0.4.ebuild,
-  -simplejson-3.0.4-r1.ebuild, -simplejson-3.0.5.ebuild,
-  -simplejson-3.1.0.ebuild, -simplejson-3.1.2.ebuild:
-  Remove old.
+  28 Oct 2015; Justin Lecher <jlec@gentoo.org> +simplejson-3.8.1.ebuild:
+  Version Bump
 
-*simplejson-3.2.0 (02 May 2013)
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  02 May 2013; Tim Harder <radhermit@gentoo.org> +simplejson-3.2.0.ebuild:
-  Version bump.
+  29 Oct 2015; Jeroen Roovers <jer@gentoo.org> simplejson-3.8.1.ebuild:
+  Stable for PPC64 (bug #564308).
 
-*simplejson-3.1.3 (07 Apr 2013)
+  Package-Manager: portage-2.2.23
+  RepoMan-Options: --ignore-arches
 
-  07 Apr 2013; Tim Harder <radhermit@gentoo.org> +simplejson-3.1.3.ebuild:
-  Version bump.
+  30 Oct 2015; Agostino Sarubbo <ago@gentoo.org> simplejson-3.8.1.ebuild:
+  amd64 stable wrt bug #564308
 
-*simplejson-3.1.2 (26 Mar 2013)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="amd64"
 
-  26 Mar 2013; Patrick Lauer <patrick@gentoo.org> +simplejson-3.1.2.ebuild:
-  Bump
+  31 Oct 2015; Jeroen Roovers <jer@gentoo.org> simplejson-3.8.1.ebuild:
+  Stable for HPPA (bug #564308).
 
-  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.0.7.ebuild:
-  Stable for ppc, wrt bug #460624
+  Package-Manager: portage-2.2.23
+  RepoMan-Options: --ignore-arches
 
-  08 Mar 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.0.7.ebuild:
-  Stable for arm, wrt bug #460624
+  03 Nov 2015; Agostino Sarubbo <ago@gentoo.org> simplejson-3.8.1.ebuild:
+  x86 stable wrt bug #564308
 
-  07 Mar 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.0.7.ebuild:
-  Stable for x86, wrt bug #460624
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
 
-  07 Mar 2013; Agostino Sarubbo <ago@gentoo.org> simplejson-3.0.7.ebuild:
-  Stable for amd64, wrt bug #460624
+  04 Nov 2015; Agostino Sarubbo <ago@gentoo.org> simplejson-3.8.1.ebuild:
+  ppc stable wrt bug #564308
 
-*simplejson-3.1.0 (07 Mar 2013)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc"
 
-  07 Mar 2013; Tim Harder <radhermit@gentoo.org> +simplejson-3.1.0.ebuild:
-  Version bump.
+  05 Nov 2015; Agostino Sarubbo <ago@gentoo.org> simplejson-3.8.1.ebuild:
+  sparc stable wrt bug #564308
 
-*simplejson-3.0.7 (13 Jan 2013)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="sparc"
 
-  13 Jan 2013; Tim Harder <radhermit@gentoo.org> +simplejson-3.0.7.ebuild:
-  Version bump and update LICENSE.
+  09 Nov 2015; Justin Lecher <jlec@gentoo.org> simplejson-3.8.1.ebuild:
+  Add python3.5 support
 
-*simplejson-3.0.5 (09 Jan 2013)
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  09 Jan 2013; Tim Harder <radhermit@gentoo.org> +simplejson-3.0.5.ebuild:
-  Version bump (bug #450562).
+  10 Nov 2015; Markus Meier <maekke@gentoo.org> simplejson-3.8.1.ebuild:
+  arm stable, bug #564308
 
-*simplejson-3.0.4-r1 (03 Jan 2013)
+  Package-Manager: portage-2.2.23
+  RepoMan-Options: --include-arches="arm"
 
-  03 Jan 2013; Mike Gilbert <floppym@gentoo.org> +simplejson-3.0.4-r1.ebuild:
-  Convert to distutils-r1, which should resolve bug 449978.
+  15 Nov 2015; Matt Turner <mattst88@gentoo.org> simplejson-3.8.1.ebuild:
+  alpha stable, bug 564308.
 
-*simplejson-3.0.4 (03 Jan 2013)
+  16 Nov 2015; Agostino Sarubbo <ago@gentoo.org> simplejson-3.8.1.ebuild:
+  ia64 stable wrt bug #564308
 
-  03 Jan 2013; Tim Harder <radhermit@gentoo.org> +simplejson-3.0.4.ebuild:
-  Version bump.
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
 
-*simplejson-3.0.0 (31 Dec 2012)
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-  31 Dec 2012; Dirkjan Ochtman <djc@gentoo.org> +simplejson-3.0.0.ebuild:
-  Version bump to 3.0.0.
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  31 Dec 2012; Dirkjan Ochtman <djc@gentoo.org> -simplejson-2.6.0.ebuild,
-  -simplejson-2.6.1.ebuild:
-  Remove old versions.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> simplejson-2.6.2.ebuild:
-  Stable for x86, wrt bug #441300
+*simplejson-3.8.2 (16 Feb 2016)
 
-  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org> simplejson-2.6.2.ebuild:
-  Stable for amd64, wrt bug #441300
+  16 Feb 2016; Justin Lecher <jlec@gentoo.org> +simplejson-3.8.2.ebuild:
+  Version Bump
 
-  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> simplejson-2.6.2.ebuild:
-  stable arm, bug #441300
+  Package-Manager: portage-2.2.27
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> simplejson-2.6.2.ebuild:
-  stable ppc, bug #441300
-
-  23 Sep 2012; Tim Harder <radhermit@gentoo.org> simplejson-2.6.2.ebuild:
-  Revert return value on failure.
-
-  23 Sep 2012; Tim Harder <radhermit@gentoo.org> -simplejson-2.3.0.ebuild,
-  -simplejson-2.5.0.ebuild, -simplejson-2.5.2.ebuild:
-  Remove old.
-
-*simplejson-2.6.2 (23 Sep 2012)
-
-  23 Sep 2012; Tim Harder <radhermit@gentoo.org> +simplejson-2.6.2.ebuild:
-  Version bump.
-
-  15 Sep 2012; Anthony G. Basile <blueness@gentoo.org> simplejson-2.6.0.ebuild:
-  Stable ppc, bug #429040
-
-  14 Sep 2012; Markus Meier <maekke@gentoo.org> simplejson-2.6.0.ebuild:
-  arm stable, bug #429040
-
-  12 Sep 2012; Johannes Huber <johu@gentoo.org> simplejson-2.6.0.ebuild:
-  Stable for x86, wrt bug #429040
-
-  12 Sep 2012; Agostino Sarubbo <ago@gentoo.org> simplejson-2.6.0.ebuild:
-  Stable for amd64, wrt bug #429040
-
-*simplejson-2.6.1 (29 Aug 2012)
-
-  29 Aug 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.6.1.ebuild:
-  Bump
-
-*simplejson-2.6.0 (28 Jun 2012)
-
-  28 Jun 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.6.0.ebuild:
-  Bump
-
-  29 May 2012; Brent Baude <ranger@gentoo.org> simplejson-2.5.0.ebuild:
-  Marking simplejson-2.5.0 ppc for bug 415881
-
-  27 May 2012; Markus Meier <maekke@gentoo.org> simplejson-2.5.0.ebuild:
-  arm stable, bug #415881
-
-*simplejson-2.5.2 (21 May 2012)
-
-  21 May 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.5.2.ebuild:
-  Bump for #416801
-
-  18 May 2012; Jeff Horelick <jdhore@gentoo.org> simplejson-2.5.0.ebuild:
-  marked x86 per bug 415881
-
-  14 May 2012; Agostino Sarubbo <ago@gentoo.org> simplejson-2.5.0.ebuild:
-  Stable for amd64, wrt bug #415881
-
-  14 May 2012; Dirkjan Ochtman <djc@gentoo.org> -simplejson-2.3.2.ebuild,
-  -simplejson-2.3.3.ebuild, -simplejson-2.4.0.ebuild:
-  Remove old versions.
-
-*simplejson-2.5.0 (19 Apr 2012)
-
-  19 Apr 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.5.0.ebuild:
-  Bump
-
-*simplejson-2.4.0 (29 Mar 2012)
-
-  29 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> +simplejson-2.4.0.ebuild:
-  Version bump to 2.4.0.
-
-  02 Mar 2012; Markus Meier <maekke@gentoo.org> simplejson-2.3.0.ebuild:
-  arm stable, bug #403269
-
-*simplejson-2.3.3 (02 Mar 2012)
-
-  02 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> -simplejson-2.2.1.ebuild,
-  +simplejson-2.3.3.ebuild:
-  Version bump to 2.3.3, remove old version.
-
-  27 Feb 2012; Brent Baude <ranger@gentoo.org> simplejson-2.3.0.ebuild:
-  Marking simplejson-2.3.0 ppc for bug 403269
-
-  13 Feb 2012; Jeff Horelick <jdhore@gentoo.org> simplejson-2.3.0.ebuild:
-  x86 stable per bug 403269
-
-  13 Feb 2012; Agostino Sarubbo <ago@gentoo.org> simplejson-2.3.0.ebuild:
-  Stable for amd64, wrt bug #403269
-
-*simplejson-2.3.2 (12 Feb 2012)
-
-  12 Feb 2012; Dirkjan Ochtman <djc@gentoo.org> -simplejson-2.1.6.ebuild,
-  +simplejson-2.3.2.ebuild:
-  Version bump to 2.3.2, remove old version.
-
-  01 Feb 2012; Brent Baude <ranger@gentoo.org> simplejson-2.2.1.ebuild:
-  Marking simplejson-2.2.1 ppc for bug 386791
-
-  26 Dec 2011; Dirkjan Ochtman <djc@gentoo.org> -simplejson-2.2.0.ebuild:
-  Remove old version.
-
-*simplejson-2.3.0 (26 Dec 2011)
-
-  26 Dec 2011; Dirkjan Ochtman <djc@gentoo.org> +simplejson-2.3.0.ebuild:
-  Version bump to 2.3.0.
-
-  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> simplejson-2.1.6.ebuild,
-  simplejson-2.2.0.ebuild, simplejson-2.2.1.ebuild:
-  Add ~sparc wrt #381461
-
-  13 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> simplejson-2.2.1.ebuild:
-  x86 stable wrt bug #386791
-
-  12 Oct 2011; Markos Chandras <hwoarang@gentoo.org> simplejson-2.2.1.ebuild:
-  Stable on amd64 wrt bug #386791
-
-*simplejson-2.2.1 (09 Sep 2011)
-
-  09 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> +simplejson-2.2.1.ebuild:
-  Version bump to 2.2.1 (remove setuptools dep, unnecessary since 2.2.0).
-
-*simplejson-2.2.0 (05 Sep 2011)
-
-  05 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> +simplejson-2.2.0.ebuild:
-  Version bump to 2.2.0.
-
-  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> -simplejson-2.1.3.ebuild,
-  -simplejson-2.1.5.ebuild:
-  Remove old ebuilds. Requested by Arfrever
-
-  27 Jun 2011; Brent Baude <ranger@gentoo.org> simplejson-2.1.6.ebuild:
-  Marking simplejson-2.1.6 ppc for bug 371663
-
-  19 Jun 2011; Markus Meier <maekke@gentoo.org> simplejson-2.1.6.ebuild:
-  x86 stable, bug #371663
-
-  18 Jun 2011; Markos Chandras <hwoarang@gentoo.org> simplejson-2.1.6.ebuild:
-  Stable on amd64 wrt bug #371663
-
-  25 May 2011; Markus Meier <maekke@gentoo.org> simplejson-2.1.6.ebuild:
-  add ~arm, bug #366619
-
-*simplejson-2.1.6 (09 May 2011)
-
-  09 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +simplejson-2.1.6.ebuild:
-  Version bump.
-
-*simplejson-2.1.5 (17 Apr 2011)
-
-  17 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +simplejson-2.1.5.ebuild:
-  Version bump.
-
-  11 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -simplejson-2.1.2.ebuild:
-  Delete.
-
-  11 Mar 2011; Thomas Kahle <tomka@gentoo.org> simplejson-2.1.3.ebuild:
-  x86 stable per bug 355271
-
-  27 Feb 2011; Brent Baude <ranger@gentoo.org> simplejson-2.1.3.ebuild:
-  stable ppc, bug 355271
-
-  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org> simplejson-2.1.3.ebuild:
-  Stable on amd64 wrt bug #355271
-
-*simplejson-2.1.3 (17 Jan 2011)
-
-  17 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +simplejson-2.1.3.ebuild:
-  Version bump.
-
-  07 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -simplejson-2.1.1.ebuild:
-  Delete.
-
-  07 Jan 2011; Brent Baude <ranger@gentoo.org> simplejson-2.1.2.ebuild:
-  Marking simplejson-2.1.2 ppc for bug 348082
-
-  13 Dec 2010; Thomas Kahle <tomka@gentoo.org> simplejson-2.1.2.ebuild:
-  x86 stable per bug 348082
-
-  09 Dec 2010; Markos Chandras <hwoarang@gentoo.org> simplejson-2.1.2.ebuild:
-  Stable on amd64 wrt bug #348082
-
-*simplejson-2.1.2 (01 Nov 2010)
-
-  01 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +simplejson-2.1.2.ebuild:
-  Version bump.
-
-  04 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
-  simplejson-2.1.1.ebuild:
-  x86 stable wrt bug #318199
-
-  10 May 2010; nixnut <nixnut@gentoo.org> simplejson-2.1.1.ebuild:
-  ppc stable #318199
-
-  04 May 2010; <angelos@gentoo.org> simplejson-2.1.1.ebuild:
-  amd64 stable, thanks to Roeland Douma (bug #318199)
-
-  26 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
-  simplejson-2.1.0.ebuild:
-  x86 stable wrt bug #314943
-
-  25 Apr 2010; Javier Villavicencio <the_paya@gentoo.org>
-  simplejson-2.1.1.ebuild:
-  Keyworded ~x86-fbsd.
-
-  13 Apr 2010; Markos Chandras <hwoarang@gentoo.org>
-  simplejson-2.1.0.ebuild:
-  Stable on amd64 wrt bug #314943
-
-*simplejson-2.1.1 (02 Apr 2010)
-
-  02 Apr 2010; Dirkjan Ochtman <djc@gentoo.org> +simplejson-2.1.1.ebuild:
-  Version bump to 2.1.1.
-
-*simplejson-2.1.0 (11 Mar 2010)
-
-  11 Mar 2010; Dirkjan Ochtman <djc@gentoo.org> +simplejson-2.1.0.ebuild:
-  Version bump to 2.1.0.
-
-  20 Dec 2009; Fabian Groffen <grobian@gentoo.org>
-  simplejson-2.0.9-r1.ebuild:
-  Merged keywords from Prefix overlay
-
-  10 Oct 2009; Markus Meier <maekke@gentoo.org> simplejson-2.0.9-r1.ebuild:
-  amd64/x86 stable, bug #287579
-
-  07 Oct 2009; nixnut <nixnut@gentoo.org> simplejson-2.0.9-r1.ebuild:
-  ppc stable #287579
-
-*simplejson-2.0.9-r1 (01 Sep 2009)
-
-  01 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +simplejson-2.0.9-r1.ebuild:
-  Set SUPPORT_PYTHON_ABIS.
-
-  20 Jul 2009; Jeremy Olexa <darkside@gentoo.org> simplejson-2.0.9.ebuild:
-  amd64 stable, bug 277333
-
-  17 Jul 2009; nixnut <nixnut@gentoo.org> simplejson-2.0.9.ebuild:
-  ppc stable #277333
-
-  15 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
-  simplejson-2.0.9.ebuild:
-  stable x86, bug 277333
-
-  23 Apr 2009; Patrick Lauer <patrick@gentoo.org> simplejson-2.0.9:
-  Fixing python dep for py 2.6, fixes #267179
-
-  04 Apr 2009; Markus Meier <maekke@gentoo.org> simplejson-2.0.4.ebuild:
-  amd64/x86 stable, bug #243812
-
-  03 Apr 2009; Joseph Jezak <josejx@gentoo.org> simplejson-2.0.4.ebuild:
-  Marked ppc stable for bug #243812.
-
-*simplejson-2.0.9 (03 Apr 2009)
-
-  03 Apr 2009; Patrick Lauer <patrick@gentoo.org> +simplejson-2.0.9.ebuild:
-  Bump to 2.0.9, fixes #264556
-
-  06 Mar 2009; Brent Baude <ranger@gentoo.org> simplejson-2.0.4.ebuild:
-  marking simplejson-2.0.4 ~ppc for 253853
-
-*simplejson-2.0.4 (22 Nov 2008)
-
-  22 Nov 2008; Jesus Rivero <neurogeek@gentoo.org> +simplejson-2.0.4.ebuild:
-  Version bump
-
-*simplejson-1.7.3 (04 Jan 2008)
-
-  04 Jan 2008; Ali Polatel <hawking@gentoo.org> +simplejson-1.7.3.ebuild:
-  Version bump.
-
-  11 Oct 2007; Michael Hanselmann <hansmi@gentoo.org>
-  simplejson-1.7.1.ebuild:
-  Stable on amd64, x86.
-
-  11 Oct 2007; Michael Hanselmann <hansmi@gentoo.org>
-  simplejson-1.7.1.ebuild:
-  Stable on amd64, x86.
-
-  04 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org>
-  -simplejson-1.6.ebuild, simplejson-1.7.1.ebuild:
-  Removed use_setuptools sed. Dropped old version.
-
-*simplejson-1.7.1 (22 Apr 2007)
-
-  22 Apr 2007; Lukasz Strzygowski <lucass@gentoo.org>
-  -simplejson-1.7.ebuild, +simplejson-1.7.1.ebuild:
-  Version bump. Dropped 1.7.
-
-*simplejson-1.7 (24 Mar 2007)
-
-  24 Mar 2007; Tiziano Müller <dev-zero@gentoo.org> -simplejson-1.5.ebuild,
-  +simplejson-1.7.ebuild:
-  Version bump (thanks to Brad Walker). Dropped old version.
-
-*simplejson-1.6 (05 Mar 2007)
-
-  05 Mar 2007; Tiziano Müller <dev-zero@gentoo.org> +simplejson-1.6.ebuild:
-  Version bump, thanks to Brad Walker, keep the old version for stabilization
-
-  05 Feb 2007; Tiziano Müller <dev-zero@gentoo.org> simplejson-1.5.ebuild:
-  Fixed ez_setup sed.
-
-  03 Feb 2007; Tiziano Müller <dev-zero@gentoo.org> -simplejson-1.4.ebuild,
-  +simplejson-1.5.ebuild, +metadata.xml:
-  Initial ebuild for bug #129346 (thanks to Brad Walker)
