--- a/dev-python/unittest2/ChangeLog
+++ b/dev-python/unittest2/ChangeLog
@@ -1,127 +1,219 @@
 # ChangeLog for dev-python/unittest2
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/unittest2/ChangeLog,v 1.33 2013/08/04 11:39:55 ago Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for ia64, wrt bug #477360
+*unittest2-1.1.0 (09 Aug 2015)
+*unittest2-1.0.1-r1 (09 Aug 2015)
+*unittest2-0.8.0 (09 Aug 2015)
+*unittest2-0.5.1-r2 (09 Aug 2015)
+*unittest2-0.5.1-r1 (09 Aug 2015)
 
-  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for sparc, wrt bug #477360
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +files/remove-argparse-dependence.patch,
+  +files/unittest2-0.8.0-argparse.patch, +metadata.xml,
+  +unittest2-0.5.1-r1.ebuild, +unittest2-0.5.1-r2.ebuild,
+  +unittest2-0.8.0.ebuild, +unittest2-1.0.1-r1.ebuild,
+  +unittest2-1.1.0.ebuild:
+  proj/gentoo: Initial commit
 
-  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for alpha, wrt bug #477360
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  23 Jul 2013; Agostino Sarubbo <ago@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for arm, wrt bug #477360
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for ppc64, wrt bug #477360
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for ppc, wrt bug #477360
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for amd64, wrt bug #477360
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> unittest2-1.1.0.ebuild:
+  Add pypy3 support
 
-  19 Jul 2013; Jeroen Roovers <jer@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  Stable for HPPA (bug #477360).
+  Package-Manager: portage-2.2.20.1
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> unittest2-0.5.1-r1.ebuild:
-  keyword ~amd64-fbsd, bug #453136
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> unittest2-0.5.1-r1.ebuild,
+  unittest2-0.5.1-r2.ebuild, unittest2-0.8.0.ebuild,
+  unittest2-1.0.1-r1.ebuild, unittest2-1.1.0.ebuild:
+  Use https by default
 
-*unittest2-0.5.1-r1 (07 Jan 2013)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  07 Jan 2013; Michał Górny <mgorny@gentoo.org> +unittest2-0.5.1-r1.ebuild:
-  Migrate to distutils-r1.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  12 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
-  Remove myself as a maintainer.
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  26 Jul 2011; Jesus Rivero <neurogeek@gentoo.org> unittest2-0.5.1.ebuild:
-  Restrict tests for Python 2.4.
-  http://hg.python.org/unittest2/rev/d2be68aedc8e
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  29 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> unittest2-0.5.1.ebuild:
-  ppc64 stable wrt #361985
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> unittest2-0.5.1-r1.ebuild,
+  unittest2-0.5.1-r2.ebuild, unittest2-0.8.0.ebuild:
+  Enable https for all google URIs
 
-  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> unittest2-0.5.1.ebuild:
-  alpha/arm/ia64/s390/sh/sparc stable wrt #361985
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  04 Apr 2011; Jeroen Roovers <jer@gentoo.org> unittest2-0.5.1.ebuild:
-  Stable for HPPA (bug #361985).
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  26 Mar 2011; Tobias Klausmann <klausman@gentoo.org> unittest2-0.5.1.ebuild:
-  Keyworded on alpha, bug #357577
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  13 Mar 2011; Markus Meier <maekke@gentoo.org> unittest2-0.5.1.ebuild:
-  add ~arm, bug #357577
+  Bug: https://bugs.gentoo.org/552720
 
-  08 Mar 2011; Jeroen Roovers <jer@gentoo.org> unittest2-0.5.1.ebuild:
-  Marked ~hppa (bug #357577).
+  01 Sep 2015; Matthew Thode <mthode@mthode.org> unittest2-1.1.0.ebuild:
+  adding missing x86 keyword
 
-  07 Jan 2011; Brent Baude <ranger@gentoo.org> unittest2-0.5.1.ebuild:
-  Marking unittest2-0.5.1 ppc for bug 345487
+  Package-Manager: portage-2.2.20.1
 
-  24 Dec 2010; Fabian Groffen <grobian@gentoo.org> unittest2-0.5.1.ebuild:
-  Added Prefix keywords, bug #339072
+  10 Oct 2015; Mikle Kolyada <zlogene@gentoo.org> unittest2-1.0.1-r1.ebuild,
+  unittest2-1.1.0.ebuild:
+  Add ~sparc keywords wrt bug #544146
 
-  07 Dec 2010; Markos Chandras <hwoarang@gentoo.org> unittest2-0.5.1.ebuild:
-  Stable on amd64 wrt bug #345487
+  Package-Manager: portage-2.2.20.1
 
-  06 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  unittest2-0.5.1.ebuild:
-  Support Python 3.
+*unittest2-1.1.0-r1 (11 Oct 2015)
 
-  16 Nov 2010; Thomas Kahle <tomka@gentoo.org> unittest2-0.5.1.ebuild:
-  x86 stable per bug 345487
+  11 Oct 2015; Justin Lecher <jlec@gentoo.org> +unittest2-1.1.0-r1.ebuild:
+  Add python3.5 support
 
-  24 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  unittest2-0.5.1.ebuild:
-  Keyword ~ppc64 wrt #339072
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  24 Oct 2010; Raúl Porcel <armin76@gentoo.org> unittest2-0.5.1.ebuild:
-  Add ~ia64/~s390/~sparc wrt #339072
+  14 Oct 2015; Michał Górny <mgorny@gentoo.org> unittest2-1.1.0.ebuild,
+  -unittest2-1.1.0-r1.ebuild:
+  dev-python/*: Restore keywords and un-revbump for py3.5
 
-  20 Oct 2010; Brent Baude <ranger@gentoo.org> unittest2-0.5.1.ebuild:
-  Marking unittest2-0.5.1 ~ppc for bug 339072
+  Restore keywords that were removed unnecessarily, and collapse
+  unnecessary revbumps on packages with added python3.5 support.
 
-*unittest2-0.5.1 (12 Jul 2010)
+  14 Oct 2015; Michał Górny <mgorny@gentoo.org> unittest2-0.8.0.ebuild:
+  Add python3.5 on v0.8.0
 
-  12 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -unittest2-0.4.2.ebuild, -unittest2-0.5.0.ebuild, +unittest2-0.5.1.ebuild:
-  Version bump.
+  14 Oct 2015; Justin Lecher <jlec@gentoo.org> unittest2-1.1.0.ebuild:
+  Rekeyword according to old KEYWORDS
 
-*unittest2-0.5.0 (11 Jul 2010)
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  11 Jul 2010; Dirkjan Ochtman <djc@gentoo.org> +unittest2-0.5.0.ebuild:
-  Version bump to 0.5.0.
+  22 Oct 2015; Justin Lecher <jlec@gentoo.org> unittest2-0.5.1-r1.ebuild,
+  unittest2-0.5.1-r2.ebuild:
+  Drop deprecated usage of DISTUTILS_NO_PARALLEL_BUILD
 
-*unittest2-0.4.2 (06 Jun 2010)
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  06 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -unittest2-0.4.1.ebuild, +unittest2-0.4.2.ebuild:
-  Version bump.
+  02 Nov 2015; Justin Lecher <jlec@gentoo.org>
+  +files/unittest2-1.1.0-python3.5-test.patch, unittest2-1.1.0.ebuild:
+  Fix for test failures in python3.5
 
-*unittest2-0.4.1 (05 Jun 2010)
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  05 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -unittest2-0.4.0.ebuild, +unittest2-0.4.1.ebuild:
-  Version bump.
+  02 Nov 2015; Justin Lecher <jlec@gentoo.org> unittest2-1.1.0.ebuild:
+  Revert accidental stabilization
 
-*unittest2-0.4.0 (09 Apr 2010)
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  09 Apr 2010; Dirkjan Ochtman <djc@gentoo.org> -unittest2-0.3.0.ebuild,
-  +unittest2-0.4.0.ebuild:
-  Version bump to 0.4, fix tests.
+  02 Nov 2015; Agostino Sarubbo <ago@gentoo.org> unittest2-1.1.0.ebuild:
+  amd64 stable wrt bug #564588
 
-*unittest2-0.3.0 (26 Mar 2010)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="amd64"
 
-  26 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -unittest2-0.2.0.ebuild, +unittest2-0.3.0.ebuild:
-  Version bump.
+  02 Nov 2015; Agostino Sarubbo <ago@gentoo.org> unittest2-1.1.0.ebuild:
+  x86 stable wrt bug #564588
 
-*unittest2-0.2.0 (16 Mar 2010)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
 
-  16 Mar 2010; Dirkjan Ochtman <djc@gentoo.org> +unittest2-0.2.0.ebuild,
-  +metadata.xml:
-  Initial version 0.2.0.
+  04 Nov 2015; Agostino Sarubbo <ago@gentoo.org> unittest2-1.1.0.ebuild:
+  ppc stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc"
+
+  04 Nov 2015; Agostino Sarubbo <ago@gentoo.org> unittest2-1.1.0.ebuild:
+  ppc64 stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc64"
+
+  05 Nov 2015; Agostino Sarubbo <ago@gentoo.org> unittest2-1.1.0.ebuild:
+  sparc stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="sparc"
+
+  16 Nov 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Global: Update remote-id in metadata.xml
+
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  16 Nov 2015; Agostino Sarubbo <ago@gentoo.org> unittest2-1.1.0.ebuild:
+  ia64 stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
+
+  19 Nov 2015; Agostino Sarubbo <ago@gentoo.org> unittest2-1.1.0.ebuild:
+  alpha stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="alpha"
+
+  22 Nov 2015; Jeroen Roovers <jer@gentoo.org> unittest2-1.1.0.ebuild:
+  Stable for HPPA (bug #549898).
+
+  Package-Manager: portage-2.2.25
+  RepoMan-Options: --ignore-arches
+
+  22 Nov 2015; Markus Meier <maekke@gentoo.org> unittest2-1.1.0.ebuild:
+  arm stable, bug #564588
+
+  Package-Manager: portage-2.2.25
+  RepoMan-Options: --include-arches="arm"
+
+  23 Nov 2015; Justin Lecher <jlec@gentoo.org>
+  -files/unittest2-0.8.0-argparse.patch, metadata.xml,
+  -unittest2-0.5.1-r1.ebuild, -unittest2-0.5.1-r2.ebuild,
+  -unittest2-0.8.0.ebuild:
+  Drop old
+
+  obsoletes
+
+  Gentoo-Bug: https://bugs.gentoo.org/show_bug.cgi?id=501638
+
+  Package-Manager: portage-2.2.25
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
+
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
+
