--- a/metadata/md5-cache/dev-util/cmake-3.4.2
+++ b/metadata/md5-cache/dev-util/cmake-3.4.2
@@ -4,10 +4,10 @@ DESCRIPTION=Cross platform Make
 EAPI=5
 HOMEPAGE=http://www.cmake.org/
 IUSE=doc emacs system-jsoncpp ncurses qt4 qt5 test
-KEYWORDS=alpha amd64 arm ~arm64 hppa ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=CMake
 RDEPEND=>=app-arch/libarchive-3.0.0:= >=dev-libs/expat-2.0.1 >=net-misc/curl-7.20.0-r1[ssl] sys-libs/zlib virtual/pkgconfig emacs? ( virtual/emacs ) ncurses? ( sys-libs/ncurses:0= ) qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 ) qt5? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtwidgets:5 ) system-jsoncpp? ( >=dev-libs/jsoncpp-0.6.0_rc2:0= )
 SLOT=0
-SRC_URI=http://www.cmake.org/files/v3.3/cmake-3.3.1.tar.gz http://www.cmake.org/gitweb?p=cmake.git;a=patch;h=b9ec9392da21a3421e48c6961976060d872faffb -> cmake-3.3.1-FindPkgConfig_remove_variable_dereference.patch
+SRC_URI=http://www.cmake.org/files/v3.4/cmake-3.4.2.tar.gz
 _eclasses_=bash-completion-r1	acf715fa09463f043fbfdc1640f3fb85	cmake-utils	0430c386d85cec959d72640afd63ea91	elisp-common	9f56c4e9bf1282dbfc2a5a09e1124e74	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85	versionator	99ae9d758cbe7cfed19170e7d48f5a9c	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=5a1cedf9409a012a6d6e2d09a9a59370
+_md5_=ce7ad75befb4416b9110e0ae9bc7851f
